feat: add guest authentication and improve ONDC checkout flow
- Implement guest login with device-based authentication
- Fix session persistence across MCP tool calls
- Add auth token management for API requests
- Fix SELECT request structure for ONDC compliance
- Improve message ID extraction for async operations
- Update cart operations with proper session handling
- Fix product enrichment with authentication
- Add comprehensive API documentation in README
- Clean up test files and reference implementations

Note: SELECT/INIT/CONFIRM flow partially implemented, requires further testing

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,7 @@ ETL_MODE=init
 # MCP Transport
 MCP_TRANSPORT=stdio
 PYTHONUNBUFFERED=1
+
+# Guest User Configuration
+GUEST_USER_ID=guestUser
+GUEST_DEVICE_ID=d58dc5e2119ae5430b93218937977939
