setup added makefile

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,25 @@
-# AI Configuration (Required)
+# ===== REQUIRED CONFIGURATION =====
+# You MUST provide these API keys for the system to work
+
+# Gemini API Key (Required for vector search and embeddings)
+# Get your key at: https://makersuite.google.com/app/apikey
 GEMINI_API_KEY=your-gemini-api-key-here
 GOOGLE_API_KEY=your-gemini-api-key-here
 
-# Backend Integration (Optional)
-BACKEND_ENDPOINT=https://your-ondc-backend.com
-WIL_API_KEY=your-backend-api-key
+# Himira Backend API Key (Required for ONDC operations)
+# Contact Himira for access or use test credentials
+WIL_API_KEY=your-himira-api-key-here
 
-# Database Configuration (Default values for Docker Compose)
-MONGODB_URI=mongodb://admin:admin123@mongodb:27017/ondc_shopping?authSource=admin
+# ===== OPTIONAL CONFIGURATION =====
+# These have sensible defaults for Docker Compose
+
+# Backend Integration (Default: Himira preprod)
+BACKEND_ENDPOINT=https://hp-buyer-backend-preprod.himira.co.in/clientApis
+
+# Vector Database Configuration
 QDRANT_HOST=qdrant
 QDRANT_PORT=6333
-QDRANT_COLLECTION=products
+QDRANT_COLLECTION=himira_products
 
 # Feature Flags
 HYBRID_SEARCH_ENABLED=true
