fix: improve vector search and API endpoint functionality
- Lowered vector similarity threshold from 0.7 to 0.3 for better recall
- Fixed agent.call_tool parameter issues (tool_name -> name, search_query -> query)
- Applied DRY principles with helper functions across API server
- Removed broken manual tool parsing logic
- Fixed reranker dict access bug (getattr -> .get)
- Cleaned up dead code and unused imports
- Implemented match/case patterns for cleaner conditionals
- Improved search service with better price extraction and response formatting
- Enhanced AI relevance scoring in reranker with flexible token matching

All endpoints now working correctly with improved search results.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       - GUEST_DEVICE_ID=d58dc5e2119ae5430b9321602618c878
     volumes:
       - ./data/sessions:/app/sessions
-      - ./backend/api/config:/app/api/config:ro
+      - ./backend/api:/app/api:ro
       - ./backend/logs:/app/logs
       - ./backend/ondc-shopping-mcp:/app/ondc-shopping-mcp:ro
     networks:
