feat: add configurable supervisor web interface for log monitoring
- Add supervisor web interface at http://localhost:9001 for process management
- Make interface fully configurable via environment variables
- Implement template-based configuration with envsubst
- Add gettext-base to Dockerfile for environment variable substitution
- Update documentation with web interface usage and security notes
- Ensure project works out of the box with sensible defaults

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,10 +2,11 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies (curl for healthchecks, supervisor for process management)
+# Install system dependencies (curl for healthchecks, supervisor for process management, gettext-base for envsubst)
 RUN apt-get update && apt-get install -y \
     curl \
     supervisor \
+    gettext-base \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
@@ -18,8 +19,8 @@ COPY . .
 # Create necessary directories
 RUN mkdir -p /app/sessions /app/data /app/logs
 
-# Copy supervisor configuration
-COPY supervisord.conf /app/supervisord.conf
+# Copy supervisor configuration template and startup script
+COPY supervisord.conf.template /app/supervisord.conf.template
 COPY start.sh /app/start.sh
 RUN chmod +x /app/start.sh
 
