--- a/backend/supervisord.conf.template
+++ b/backend/supervisord.conf.template
@@ -3,12 +3,12 @@ file=/tmp/supervisor.sock
 chmod=0700
 
 [inet_http_server]
-port=0.0.0.0:9001
-username=admin
-password=mcp2024
+port=0.0.0.0:${SUPERVISOR_WEB_PORT}
+username=${SUPERVISOR_WEB_USERNAME}
+password=${SUPERVISOR_WEB_PASSWORD}
 
 [supervisorctl]
-serverurl=http://127.0.0.1:9001
+serverurl=http://127.0.0.1:${SUPERVISOR_WEB_PORT}
 
 [supervisord]
 nodaemon=true
