--- a/backend/mcp_agent.config.template.yaml
+++ b/backend/mcp_agent.config.template.yaml
@@ -38,5 +38,5 @@ mcp:
         # Logging
         LOG_LEVEL: INFO
         LOG_FILE: /app/logs/mcp_operations.log
-        DEBUG_CURL_LOGGING: "false"
+        DEBUG_CURL_LOGGING: "true"
         MCP_DEBUG_PAYMENT_LOGS: "false"
