feat: implement universal SSE data transmission for cart and checkout operations
- Added functionality to send raw data to the frontend via SSE for cart and checkout processes.
- Enhanced cart operations to capture and transmit backend data after adding items to the cart.
- Implemented synchronization of backend cart data to local session for accurate display.
- Introduced structured data transmission for checkout stages, including order confirmation and item selection.
- Improved logging for data transmission events to facilitate debugging and monitoring.
- Updated session management to support dynamic user authentication and guest sessions.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 # Reference implementations (keep locally, don't commit)
 biap-client-node-js/
 himira-nextjs-frontend-main/
-
+/tests
 # Documentation (keep locally, don't commit)
 *.md
 !README.md
