--- a/backend/supervisord.conf
+++ b/backend/supervisord.conf
@@ -20,21 +20,7 @@ childlogdir=/app/logs
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
-; MCP server is now managed by the API server directly
-; [program:mcp-server]
-; command=python /app/mcp_stdio_wrapper.py
-; directory=/app
-; autostart=true
-; autorestart=true
-; startsecs=3
-; stderr_logfile=/app/logs/mcp-server.err.log
-; stdout_logfile=/app/logs/mcp-server.out.log
-; stdout_logfile_maxbytes=10MB
-; stderr_logfile_maxbytes=10MB
-; stdout_logfile_backups=3
-; stderr_logfile_backups=3
-; environment=MCP_TRANSPORT="stdio",PYTHONUNBUFFERED="1",LOG_LEVEL="DEBUG",PYTHONPATH="/app/ondc-shopping-mcp"
-; priority=1
+; MCP server is now managed by the API server directly via mcp-agent
 
 [program:api-server]
 command=python /app/api/server.py
