feat: enhance configuration and intelligent processing for shopping assistant
- Added configurable environment variables for SSE stream settings, API communication, and timeouts to improve flexibility.
- Updated shopping assistant instructions to emphasize proactive ingredient suggestions and intelligent tool chaining.
- Enhanced delivery address handling with new user-based retrieval methods and improved error handling for address fetching.
- Implemented smart automation for checkout processes, allowing for auto-fetching of user addresses and customer details.
- Improved logging for debugging and monitoring across various components, ensuring better traceability of operations.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,14 @@ services:
       - SUPERVISOR_WEB_PORT=${SUPERVISOR_WEB_PORT:-9001}
       - SUPERVISOR_WEB_USERNAME=${SUPERVISOR_WEB_USERNAME:-admin}
       - SUPERVISOR_WEB_PASSWORD=${SUPERVISOR_WEB_PASSWORD:-supervisor2024}
+      # SSE Stream Configuration
+      - SSE_CONNECTION_TIMEOUT=${SSE_CONNECTION_TIMEOUT:-300}      # Max SSE connection time (seconds)
+      - SSE_RAW_DATA_WAIT=${SSE_RAW_DATA_WAIT:-1.0}               # Wait time for raw data (seconds)
+      - SSE_QUEUE_TIMEOUT=${SSE_QUEUE_TIMEOUT:-0.5}               # Queue processing timeout (seconds)
+      # API Communication Configuration
+      - API_URL=${API_URL:-http://localhost:8001}                 # Internal API URL for MCP tools
+      - API_TIMEOUT=${API_TIMEOUT:-2.0}                           # HTTP request timeout (seconds)
+      - API_RETRY_ATTEMPTS=${API_RETRY_ATTEMPTS:-2}               # Number of retry attempts
     volumes:
       - ./data/sessions:/app/sessions
       - ./backend/api:/app/api:ro
