chore: update .gitignore and remove obsolete test script
- Added new entries to .gitignore for archives and test logs to improve repository cleanliness.
- Removed the outdated test_complete_journey.sh script, which was no longer needed for testing the shopping journey.
- Updated checkout_service.py to provide more detailed success messages for order initialization and confirmation.

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,9 @@
 # Reference implementations (keep locally, don't commit)
 biap-client-node-js/
 himira-nextjs-frontend-main/
-/tests
-# Documentation (keep locally, don't commit)
-*.md
-!README.md
-*.postman_collection.json
+
+# Archives
+archive/
 
 # Test files
 test_*.py
@@ -21,6 +19,7 @@ data/
 logs/
 sessions/
 backend/logs/
+test_logs/
 
 # Configuration (generated at runtime)
 backend/mcp_agent.config.yaml
@@ -34,6 +33,7 @@ __pycache__/
 .Python
 venv/
 env/
+.mypy_cache/
 
 # IDE
 .vscode/
@@ -58,3 +58,4 @@ build/
 dist/
 *.egg-info/
 Himira Order.postman_collection (2).json
+.continue/mcpServers/new-mcp-server.yaml
